--- a/www/css/style.css
+++ b/www/css/style.css
@@ -39,6 +39,8 @@
       position: absolute;
       top: 0;
       left: 0; }
+    .big-last-news .ls-1 .big-last-news-shadow {
+      background: rgba(10, 20, 30, 0.7); }
     .big-last-news .ls-1 div h1 {
       color: #fff;
       font-family: roboto;
@@ -177,6 +179,30 @@
 section {
   font-family: roboto; }
 
+.posters {
+  background: #333; }
+
+.breadcrumbs-poster {
+  font-family: roboto;
+  grid-column: 4/12; }
+  .breadcrumbs-poster ul {
+    margin: 1em auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    list-style-type: none; }
+    .breadcrumbs-poster ul li {
+      margin: 0 0.5em; }
+      .breadcrumbs-poster ul li a {
+        color: #aaa;
+        font-size: 0.8em; }
+
 .posters-wrap {
   grid-column: 2/14;
   display: -webkit-box;
@@ -209,7 +235,7 @@ section {
   align-items: center;
   -webkit-transition: border-color 0.2s linear, background 0.2s linear;
   transition: border-color 0.2s linear, background 0.2s linear;
-  background: #eee; }
+  background: #dee; }
   .poster-container a {
     text-decoration: none; }
   .poster-container p {
@@ -290,27 +316,44 @@ section {
 .fm {
   margin: 0; }
 
-.street-working {
-  background: url("../img/main.jpg");
-  background-size: cover;
-  height: 85vh; }
+.image-cover {
+  background: #333; }
 
-.message {
-  grid-column: 1/15;
+.footer-streets {
+  margin: 0; }
+
+.streets-images {
+  grid-column: 1/9;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  font-size: 2.5em; }
-  .message h1 {
+  justify-content: center; }
+  .streets-images div {
+    margin: 0.5em; }
+
+.streets-title {
+  grid-column: 5/11;
+  text-align: center; }
+  .streets-title h2 {
     font-family: roboto;
     font-weight: 100;
-    color: #fff; }
+    font-size: 3em;
+    color: #fff;
+    margin: 1em 0; }
+
+.street-text {
+  grid-column: 9/14; }
+  .street-text p {
+    font-family: roboto;
+    font-weight: 100;
+    font-size: 1.5em;
+    line-height: 1.5em;
+    color: #fff;
+    margin: 1em 0; }
 
 @media screen and (max-width: 992px) {
   .nav {
@@ -612,13 +655,22 @@ nav {
   overflow: hidden; }
 
 .event-shadow {
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background: rgba(20, 20, 30, 0.7); }
   .event-shadow h3 {
     color: #fff;
     font-weight: 100;
     font-size: 2em;
-    margin: 2em 1em;
+    margin: 0 1em;
+    text-align: center;
     -webkit-transition: color 0.3s linear, background 0.3s linear;
     transition: color 0.3s linear, background 0.3s linear; }
 
