--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -6,6 +6,7 @@
 @import "streets.scss";
 @import "../img/fonts/roboto/roboto.css";
 @import "media.scss";
+@import "help.scss";
 *{
 	margin:0;
 	padding:0;
