--- a/source/css/people.scss
+++ b/source/css/people.scss
@@ -1,27 +1,35 @@
-.people-image{
-	grid-column: 4/12;
-	display: flex;
-	justify-content: center;
-	transition: transform 0.2s linear;	
+.people{
+	padding:4vh 0;
+	background: #333;
 }
-.people-title{
-	grid-column: 5/11;
-	display: flex;
-	justify-content: center;
-	margin-top:3em;
-	h2{
-		font-weight: 400;
-		color: #000;
-		margin:1em;
-	}
-	a{
-		text-decoration: none;
-	}
-	a:hover{
-		text-decoration:underline;
-	};
+.people-main-cover{
 	
 }
-.people-image:hover{
-	transform: scale(1.005, 1.005);
+.people-description{
+	background:#fff;
+	margin: 2em 0;
+	border-radius: 0 1em 1em 0;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	width: 20vw;
+	padding:3em;
+	h2{
+		color:#0062d7;
+		font-weight: 300;
+	}
+	p{
+		margin:1em 0;
+		line-height: 1.5em;
+	}
+}
+.people-photo{
+	grid-column:2/14;
+	display:flex;
+	img{
+		margin:1em 0.5em;
+	}
+}
+.people-text{
+	grid-column:5/11;
 }
