--- a/source/css/people.scss
+++ b/source/css/people.scss
@@ -26,10 +26,25 @@
 .people-photo{
 	grid-column:2/14;
 	display:flex;
+	justify-content: center;
 	img{
 		margin:1em 0.5em;
 	}
 }
 .people-text{
 	grid-column:5/11;
+	
+}
+.question{
+	font-weight: 500;
+	line-height: 1.5em;
+	font-size: 1.25em;
+	margin: 1.5em 0;
+}
+.answer{
+	line-height: 1.5em;
+	font-size: 1.25em;
+	font-weight: 400;
+	color:#555;
+	margin:0.5em 0;
 }
