--- a/www/css/style.css
+++ b/www/css/style.css
@@ -311,12 +311,28 @@ section {
   grid-column: 2/14;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
   .people-photo img {
     margin: 1em 0.5em; }
 
 .people-text {
   grid-column: 5/11; }
+
+.question {
+  font-weight: 500;
+  line-height: 1.5em;
+  font-size: 1.25em;
+  margin: 1.5em 0; }
+
+.answer {
+  line-height: 1.5em;
+  font-size: 1.25em;
+  font-weight: 400;
+  color: #555;
+  margin: 0.5em 0; }
 
 .fm {
   margin: 0; }
