--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -260,7 +260,7 @@ nav{
 	grid-column:2/14;
 	display:flex;
 	flex-wrap:wrap;
-	justify-content:space-evenly; 
+	justify-content:center; 
 	font-family: roboto;
 
 }
